--- a/.env
+++ b/.env
@@ -8,7 +8,11 @@ PORT=8080
 
 JWT_SECRET=1231231313
 
-
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=carlosivanmorenoc@gmail.com
+SMTP_PASS=xefl jlfq ltvz jdak
+SMTP_FROM=carlosivanmorenoc@gmail.com
 
 
 #QB2D53T2TMADF5DX7FC6AY8B
